--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "MailKit"]
 	path = MailKit
-	url = git://github.com/jstedfast/MailKit.git
+	url = https://github.com/jstedfast/MailKit.git
 [submodule "MimeKit"]
 	path = MimeKit
-	url = git://github.com/jstedfast/MimeKit.git
+	url = https://github.com/jstedfast/MimeKit.git
